[workspace]
members = ["program", "primitives", "scripts"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["0xSasaPrsic"]

[workspace.dependencies]
sp1-helios-primitives = { path = "primitives" }

helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.8.6" }

sp1-sdk = "5.0.0"
sp1-build = "5.0.0"
sp1-zkvm = "5.0.0"

serde = { version = "1.0.203" }
serde_cbor = "0.11.2"

alloy-sol-types = "0.8.15"
alloy-primitives = "0.8.15"
alloy = { version = "0.9.1", features = ["full"] }

anyhow = "1.0.86"
tree_hash = "0.9.0"

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-4.0.0" }
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-4.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-5.0.0-v2" }
# From upstream: https://github.com/a16z/helios/blob/master/Cargo.toml#L115
ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }